Formulario y texto actualizado
Se agregó mensaje de envío confirmado, se cambiaron los iconos en nosotros, se agregó chat de facebook.

--- a/nosotros.html
+++ b/nosotros.html
@@ -193,12 +193,12 @@
 
 
     <!-- Introduction -->
-    <section id="introduction" class="cards-1 bg-gray">
+    <section id="valores" class="cards-1 bg-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2-heading">Nuestros valores</h2>
-                    <p class="p-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde placeat eius quidem! Sequi quam, voluptatum nulla omnis libero neque illo ut nisi, vero delectus unde.</p>
+                    <p class="p-heading">Trabajamos para ti y para darte la confianza de que tu propiedad está en buenas manos.</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -207,11 +207,11 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-icon">
-                            <span class="fas fa-camera"></span>
+                            <span class="fas fa-grin-wink"></span>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Confianza</h4>
-                            <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni nesciunt debitis neque vel tempora necessitatibus? Quasi tempora nemo in eos ut sapiente quo quod officiis nostrum laborum minima, unde quam!</div>
+                            <!-- <div class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni nesciunt debitis neque vel tempora necessitatibus? Quasi tempora nemo in eos ut sapiente quo quod officiis nostrum laborum minima, unde quam!</div> -->
                         </div>
                     </div>
                     <!-- end of card -->
@@ -219,11 +219,11 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-icon">
-                            <span class="fas fa-video"></span>
+                            <span class="fas fa-star"></span>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Honestidad</h4>
-                            <div class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis cumque, asperiores hic in minus, non, optio nobis eligendi officia sequi soluta provident praesentium!</div>
+                            <!-- <div class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis cumque, asperiores hic in minus, non, optio nobis eligendi officia sequi soluta provident praesentium!</div> -->
                         </div>
                     </div>
                     <!-- end of card -->
@@ -231,11 +231,11 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-icon">
-                            <span class="fas fa-paint-brush"></span>
+                            <span class="fas fa-smile"></span>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Respeto</h4>
-                            <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores iste rem deleniti a, suscipit eos quod!</div>
+                            <!-- <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores iste rem deleniti a, suscipit eos quod!</div> -->
                         </div>
                     </div>
                     <!-- end of card -->
@@ -243,11 +243,11 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-icon">
-                            <span class="fas fa-paint-brush"></span>
+                            <span class="fas fa-thumbs-up"></span>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Trabajo en equipo</h4>
-                            <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores iste rem deleniti a, suscipit eos quod!</div>
+                            <!-- <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores iste rem deleniti a, suscipit eos quod!</div> -->
                         </div>
                     </div>
                     <!-- end of card -->
@@ -255,11 +255,11 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-icon">
-                            <span class="fas fa-paint-brush"></span>
+                            <span class="fas fa-smile-beam"></span>
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Empatía</h4>
-                            <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores iste rem deleniti a, suscipit eos quod!</div>
+                            <!-- <div class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt maiores iste rem deleniti a, suscipit eos quod!</div> -->
                         </div>
                     </div>
                     <!-- end of card -->
@@ -273,14 +273,15 @@
 
 
         <!-- Experience -->
-        <section class="ex-header">
+        <!-- <section class="ex-header">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-10 offset-xl-1 text-center">
                         <h2 class="text-light">Experiencia</h2>
                         <p class="p-large text-light">Hemos trabajado con diferentes desarrollos y clientes particulares</p>
-                    </div> <!-- end of col -->
-                    <div class="logos-slider">
+                    </div>  -->
+                    <!-- end of col -->
+                    <!-- <div class="logos-slider">
                         <img class="logos-slide" id="ls-part-1" src="images/temp-1.jpg" alt="">
                         <img class="logos-slide" id="ls-part-2" src="images/temp-2.jpg" alt="">
                         <img class="logos-slide" id="ls-part-3" src="images/temp-3.jpg" alt="">
@@ -288,9 +289,12 @@
                         <img class="logos-slide" id="ls-part-5" src="images/temp-5.jpg" alt="">
                         <img class="logos-slide" id="ls-part-6" src="images/temp-6.jpg" alt="">
                     </div>
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </section> <!-- end of ex-header -->
+                </div> 
+            </div> 
+        </section>  -->
+        <!-- end of row -->
+        <!-- end of container -->
+        <!-- end of ex-header -->
         <!-- end of header --> 
 
     <!-- Contact -->
@@ -301,9 +305,9 @@
                     <h2 class="h2-heading">Contáctanos</h2>
                     <p class="p-heading">¡Nos encantaría poder ayudarte!</p>
                     <ul class="list-unstyled li-space-lg">
-                        <li><i class="fas fa-map-marker-alt"></i> &nbsp;Av. Sor Juana Inés de la Cruz 344, Tlalnepantla, Edo Méx, CP.550000</li>
-                        <li><i class="fas fa-phone"></i> &nbsp;<a href="tel:00817202212">+52 12 34 56 78</a></li>
-                        <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:contact@site.com">correo@ejemplo.com</a></li>
+                        <li><i class="fas fa-map-marker-alt"></i> &nbsp;Avenida Sor Juana Inés de la Cruz 344, Tlalnepantla de Baz, México C.P. 54000</li>
+                        <li><i class="fas fa-phone"></i> &nbsp;<a href="tel:5628522201">56 2852 2201</a></li>
+                        <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:contacto@businesshouse.com.mx">contacto@businesshouse.com.mx</a></li>
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -333,6 +337,18 @@
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </section> <!-- end of form-1 -->
+
+    <aside class="form-advice hide">
+        <div class="fa-container">
+            <div class="col-lg-12 col-sm-12">
+                <h5 class="text-light">¡Datos enviados!</h4>
+                <p class="text-light p-small">Nos pondremos en contacto contigo muy pronto</p>
+            </div>
+            <div class="col-lg-12 col-sm-12">
+                <button class="btn-solid-reg" id="fa-btn">Aceptar</button>
+            </div>
+        </div>
+    </aside>
     <!-- end of contact -->
 
 
@@ -349,8 +365,8 @@
                     <div class="footer-col second">
                         <h6>Enlaces</h6>
                         <ul class="list-unstyled li-space-lg p-small">
-                            <li><a href="terminos.html">Términos y condiciones</a></li>
-                            <li><a href="privacidad.html">Política de privacidad</a></li>
+                            <li><a href="#">Términos y condiciones</a></li>
+                            <li><a href="#">Política de privacidad</a></li>
                         </ul>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third text-center">
@@ -404,6 +420,43 @@
         <img src="images/up-arrow.png" alt="alternative">
     </button>
     <!-- end of back to top button -->
+
+
+
+    <!-- Messenger Plugin de chat Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Plugin de chat code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "102453522268675");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v12.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <!-- end of messenger-plugin -->
+
+
+
     	
     <!-- Scripts -->
     <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
