--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
 <body>
     
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark" aria-label="Main navigation">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-light top-nav-no-collapse" aria-label="Main navigation">
         <div class="container">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/BH_logo_blanco.svg" alt="alternative"></a> 
+            <!-- Dark logo -->
+            <a id="dark-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_blanco.svg" alt="Logo Business House"></a> 
+            <!-- Light logo -->
+            <a id="light-logo" class="navbar-brand logo-image hide" href="index.html"><img src="images/BH_logo_normal.svg" alt="Logo Business House"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Desi</a> -->
