Añadí imgaen menu a todas las páginas
Añadí los dos svg del menú, el oscuro y el claro

--- a/articulo.html
+++ b/articulo.html
@@ -38,7 +38,10 @@
         <div class="container">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/BH_logo_blanco.svg" alt="alternative"></a> 
+            <!-- Dark logo -->
+            <a id="dark-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_blanco.svg" alt="Logo Business House"></a> 
+            <!-- Light logo -->
+            <a id="light-logo" class="navbar-brand logo-image hide" href="index.html"><img src="images/BH_logo_normal.svg" alt="Logo Business House"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Desi</a> -->
