Apuro Cambio en textos y en la imagen del menú
Cambios que quiere ver el lic sobre el menú y su logo en grande

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
             <!-- Image Logo -->
             <!-- Dark logo -->
-            <a id="dark-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_blanco.svg" alt="Logo Business House"></a> 
+            <!-- <a id="dark-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_blanco.svg" alt="Logo Business House"></a>  -->
             <!-- Light logo -->
-            <a id="light-logo" class="navbar-brand logo-image hide" href="index.html"><img src="images/BH_logo_normal.svg" alt="Logo Business House"></a> 
+            <a id="light-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_normal.svg" alt="Logo Business House"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Desi</a> -->
@@ -118,7 +118,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="h1-large" id="h1-index">No pagues comisión por la venta de tu propiedad</h1>
+                        <h1 class="h1-large" id="h1-index">Vende tu propiedad sin pagar comisión</h1>
                         <a class="btn-solid-lg" href="#introduction">Descubre cómo</a>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -137,12 +137,17 @@
 
 
     <!-- Introduction -->
+    <section id="Introduction-phrase">
+        <div class="container">
+            <h1>Tu patrimonio en buenas manos</h1>
+        </div>
+    </section>
     <main id="introduction" class="cards-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2-heading">¿Qué es business House?</h2>
-                    <p class="p-heading">Somos una agencia de marketing digital especializados en el mercado inmobiliario; cuyo objetivo principal es: comercializar propiedades sin el cobro de comisión</p>
+                    <p class="p-heading">Somos una agencia de marketing digital y asesores especializados en el mercado inmobiliario; cuyo objetivo principal es: comercializar propiedades sin el cobro de comisión</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row cards-container">
@@ -214,7 +219,7 @@
                         <!-- Text Container -->
                         <div class="text-container">
                             <h2>La elección correcta</h2>
-                            <p>Nos encargamos de tu propiedad; creamos contenido de valor diseñando especialmente para tu propiedad. Estaremos contigo en todo el proceso de venta.</p>
+                            <p>Nos encargamos de tu propiedad; nos compromentemos a estar contigo en todo el proceso de venta.</p>
                         </div> <!-- end of text-container -->
                         <!-- end of text container -->
 
@@ -261,7 +266,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Edición de material audiovisual</h2>
-                        <p>Creamos contenido (imágenes, flayers digitales y videos) de tu propiedad para mostrarlos en campañas y redes sociales.</p>
+                        <p>Creamos contenido, como: imágenes, banners digitales y videos para mostrarlos en redes sociales y campañas digitales.</p>
                         <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
