--- a/contacto.html
+++ b/contacto.html
@@ -34,14 +34,14 @@
 <body>
     
     <!-- Navigation -->
-    <nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark" aria-label="Main navigation">
+    <nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-light top-nav-no-collapse" aria-label="Main navigation">
         <div class="container">
 
             <!-- Image Logo -->
             <!-- Dark logo -->
-            <a id="dark-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_blanco.svg" alt="Logo Business House"></a> 
+            <!-- <a id="dark-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_blanco.svg" alt="Logo Business House"></a>  -->
             <!-- Light logo -->
-            <a id="light-logo" class="navbar-brand logo-image hide" href="index.html"><img src="images/BH_logo_normal.svg" alt="Logo Business House"></a> 
+            <a id="light-logo" class="navbar-brand logo-image show" href="index.html"><img src="images/BH_logo_normal.svg" alt="Logo Business House"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Desi</a> -->
@@ -53,7 +53,7 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ms-auto navbar-nav-scroll">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html#header">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="index.html#header">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#services">Servicios</a>
@@ -77,7 +77,7 @@
                         <a class="nav-link" href="nosotros.html">¿Quiénes somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
                 <div class="nav-item social-icons">
