Formulario telefono, y google analitycs
Formulario de contacto con teléfono,
Google Analytics en las páginas,
Imágenes de las propiedades.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 	
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon_normal.svg">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZWZWDXK7S"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-6ZWZWDXK7S');
+    </script>
 </head>
 <body>
     
@@ -219,7 +229,7 @@
                         <!-- Text Container -->
                         <div class="text-container">
                             <h2>La elección correcta</h2>
-                            <p>Nos encargamos de tu propiedad; nos compromentemos a estar contigo en todo el proceso de venta.</p>
+                            <p>Nos encargamos de tu propiedad; nos comprometemos a estar contigo en todo el proceso de venta.</p>
                         </div> <!-- end of text-container -->
                         <!-- end of text container -->
 
@@ -244,7 +254,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Edición de fotos</h2>
-                        <p>Nuestro equipo se encargará de darle la mejor imagen a tu propiedad.</p>
+                        <p style="text-align: justify;">Nuestro equipo se encargará de darle la mejor imagen a tu propiedad.</p>
                         <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -266,7 +276,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Edición de material audiovisual</h2>
-                        <p>Creamos contenido, como: imágenes, banners digitales y videos para mostrarlos en redes sociales y campañas digitales.</p>
+                        <p style="text-align: justify;">Creamos contenido, como: imágenes, banners digitales y videos para mostrarlos en redes sociales y campañas digitales.</p>
                         <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -288,7 +298,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Campañas publicitarias</h2>
-                        <p>Anunciaremos tu propiedad con publicidad pagada en redes sociales y Google Ads.</p>
+                        <p style="text-align: justify;">Anunciaremos tu propiedad con publicidad pagada en redes sociales y Google Ads.</p>
                         <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -309,7 +319,7 @@
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h2>Asesoría legal</h2>
-                        <p>Nos encargamos de brindar asesoría jurídica para solucionar todos aquellos temas relacionados con las ventas de propiedades en materia de derecho.</p>
+                        <p style="text-align: justify;">Nos encargamos de brindar asesoría jurídica para solucionar todos aquellos temas relacionados con las ventas de propiedades en materia de derecho.</p>
                         <!-- <a class="read-more no-line green" href="articulo.html">Saber más <span class="fas fa-long-arrow-alt-right"></span></a> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
