Propiedades al HTML, y corrección encimado e instagram
Añadí la información al HTML y corregí el encimado de propiedades al cargar, también cambié el código para mostrar correctamente instagram

--- a/propiedades.html
+++ b/propiedades.html
@@ -236,7 +236,7 @@
                             <h4>Excelente Departamento en venta, en Insurgentes Mixcoac</h4>
                             <p>Campana 20, Insurgentes Mixcoac, Benito Juárez, 03920 Ciudad de México, CDMX</p>
                             <p>$4,980,000</p>
-                            <p>Departamento en PLANTA BAJA, ubicado en Insurgentes Mixcoac. Son 3 torres, cada torre cuenta con 3 niveles , y 8 departamentos por piso. Excelente mantenimiento, , acogedor e iluminado, cuenta con dos recámaras. La principal con baño completo, otro baño completo para áreas comunes , sala, comedor y cocina en espacios abiertos, área para lavadora.</p>
+                            <p>Departamento en PLANTA BAJA, ubicado en Insurgentes Mixcoac. Son 3 torres, cada torre cuenta con 3 niveles , y 8 departamentos por piso. Excelente mantenimiento, acogedor e iluminado, cuenta con dos recámaras. La principal con baño completo, otro baño completo para áreas comunes, sala, comedor y cocina en espacios abiertos, área para lavadora.</p>
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Excelente Departamento en venta, en Insurgentes Mixcoac">Contactar</button>
                         </div>
                         <div class="element-item departamento">
@@ -244,7 +244,7 @@
                             <h4>Departamento en Palmerales Atizapán</h4>
                             <p>Jardines de Atizapán, Emiliano Zapata 37</p>
                             <p>$1,900,000</p>
-                            <p>2 recamaras principal con baño, 2 baños completos, Sala - comedor, Cocina equipada, Barra-desayunador, Área de lavado, Lámparas y persiana incluidas, 1 cajón de estacionamiento, Áreas verdes 70m2, Vigilancia, estacionamiento para visitas.</p>
+                            <p>2 recámaras principal con baño, 2 baños completos, sala-comedor, cocina equipada, barra-desayunador, área de lavado, lámparas y persiana incluidas, 1 cajón de estacionamiento, áreas verdes 70 m2, vigilancia, estacionamiento para visitas</p>
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento en Palmerales Atizapán">Contactar</button>
                         </div>
                         <div class="element-item casa">
@@ -260,7 +260,7 @@
                             <h4>Casa en Las Alamedas</h4>
                             <p>Tortolas # 44 Fraccionamiento Las Alamedas, Atizapán de Zaragoza</p>
                             <p>$6,200,000</p>
-                            <p>Casa recién remodelada en Las Alamedas, Atizapán de Zaragoza, con 4 recámaras, 2 1/2 baños, con estacionamiento para 4 autos, sala de Estar y de Televisión, Estudio, Desayunador, Cocina nueva con una isla, Patio trasero con jardín y sala techada, Cisterna y Cancelería de alumio.</p>
+                            <p>Casa recién remodelada en Las Alamedas, Atizapán de Zaragoza, con 4 recámaras, 2 1/2 baños, con estacionamiento para 4 autos, sala de estar y de televisión, estudio, desayunador, cocina nueva con una isla, patio trasero con jardín y sala techada.</p>
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa en Las Alamedas">Contactar</button>
                         </div>
                         <div class="element-item casa">
@@ -268,7 +268,7 @@
                             <h4>Casa en Valle Dorado</h4>
                             <p>Boulevard Tulpan #23, Fracc. Valle Dorado, Tlalnepantla de Baz.</p>
                             <p>$4,300,000</p>
-                            <p>Casa ubicada en Valle Dorado, Tlalnepantla de Baz con 2 entradas, 3 recámaras, 2 baños completos, Minibar, Cisterna, 4 armarios, cuarto de recepción, Cocina intgral y un garage con capacidad de 2 a 3 carros dependiendo el tamaño.</p>
+                            <p>Casa ubicada en Valle Dorado, Tlalnepantla de Baz con 2 entradas, 3 recámaras, 2 baños completos, minibar, cisterna, 4 armarios, cuarto de recepción, cocina intgral y un garage con capacidad de 2 a 3 carros dependiendo el tamaño.</p>
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa en Valle Dorado">Contactar</button>
                         </div>
                         <div class="element-item casa">
@@ -276,7 +276,7 @@
                             <h4>Casa en Valle Escondido</h4>
                             <p>Cto. Valle Hermoso 65 Loma de Vallescondido Atizapán</p>
                             <p>$10,990,000.00</p>
-                            <p>Casa en Valle Escondido, Atizapán, con 3 recámaras, 3 baños completos y 2 medios baños, Cocina integral con isla, Jardín con pasto sintético, Sótano, Estacionamiento para 3 autos, Cuarto de lavado, Cuarto de despensa, Estudio, Sala y espacio para comedor.</p>
+                            <p>Casa en Valle Escondido, Atizapán, con 3 recámaras, 3 baños completos y 2 medios baños, cocina integral con isla, jardín con pasto sintético, sótano, estacionamiento para 3 autos, cuarto de lavado, cuarto de despensa, estudio, sala y espacio para comedor.</p>
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa en Valle Escondido">Contactar</button>
                         </div>
                         <div class="element-item departamento">
@@ -284,9 +284,65 @@
                             <h4>Departamento Santa Fe</h4>
                             <p>Colonia Cedros a 10 min de Santa Fe</p>
                             <p>$6,500,000</p>
-                            <p>Departamento ubicado a 10 min de Santa Fe con 3 recámaras, 2 1/2 baños, 2 lugares de estacionamiento, y uno para visitas, Sala, Comedor, Antecomedor, Lavanedría Alberca techada, Gimnasio, Pista para correr, Salón de fiestas, área de asadores y Bosques con juegos para niños.</p>
+                            <p>Departamento ubicado a 10 min de Santa Fe con 3 recámaras, 2 1/2 baños, 2 lugares de estacionamiento, y uno para visitas, Sala, comedor, antecomedor, lavandería, alberca techada, gimnasio, pista para correr, salón de fiestas, área de asadores y bosques con juegos para niños.</p>
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Santa Fe">Contactar</button>
-                        </div
+                        </div>
+                        <div class="element-item departamento">
+                            <img class="img-fluid" src="Propiedades/Berriozabal/principal.JPG" alt="Foto Departamento Beriozábal">
+                            <h4>Departamento Beriozábal</h4>
+                            <p>Cerrada de Berriozabal No. 11, Colonia Tlalnepantla Centro, Tlalnepantla de Baz, Edo. Méx, C.P. 54000</p>
+                            <p>$3,224,000.00 </p>
+                            <p>Departamento inteligente de 88 m2, 2 recámaras, 2 baños completos, Cocina con cubiertos de Granito, Closets y persianas.</p>
+                            <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Beriozábal">Contactar</button>
+                        </div>
+                        <div class="element-item terreno">
+                            <img class="img-fluid" src="Propiedades/Hacienda L C/principal.JPG" alt="Foto Terreno Hacienda La Concepción">
+                            <h4>Terreno Hacienda La Concepción</h4>
+                            <p>Carretera Tepotzotlán a Arcos del Sitio Km. 12.5 Hacienda la Concepción, C.P. 54657</p>
+                            <p>Desde $900,000</p>
+                            <p>Terrenos ubicados en el desarrollo Hacienda La Concepción con todos los servicios, a solo 20 min de Tepotzotlán con calles empedradas, mirador y con próxima zona comercial.</p>
+                            <button class="btn-solid-reg propiedadBtn" data-propiedad="Terreno Hacienda La Concepción">Contactar</button>
+                        </div>
+                        <div class="element-item departamento">
+                            <img class="img-fluid" src="Propiedades/iKANI/principal.jpg" alt="Foto Departamento Ikani">
+                            <h4>Departamento Ikani</h4>
+                            <p>Lago Patzcuaro 636 Cumbres del Lago 76230 Juriquilla, Qro. México</p>
+                            <p>Desde $4,000,000</p>
+                            <p>Departamento de 147 m2 con vistas provilegiadas, 2 recámaras, 2 baños completos, 1 baño medio. Y diversas amenidades como: Parque, Estaciones de juego, ejercicio, descanso y culinarias, hamacas, salones de usos multiples, de musica, de video, canchas de Basquet, cancha polivalente y más.</p>
+                            <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Ikani">Contactar</button>
+                        </div>
+                        <div class="element-item terreno">
+                            <img class="img-fluid" src="Propiedades/Nus Kah/principal.jpeg" alt="Foto terrenos Nus Kah">
+                            <h4>Terrenos Nus kah</h4>
+                            <p>Progreso, 97323 Nus Káh, Yuc.</p>
+                            <p>$704,000.00</p>
+                            <p>Terreno en ubicación privilegiada en la península de Yucatán, a 20 minutos de Mérida, Club exclusivo con restaurante yucateco gourmet, piscina con bar, muelle social, palapas, camastros, spa, baños y vestidores.</p>
+                            <button class="btn-solid-reg propiedadBtn" data-propiedad="Terrenos Nus Kah">Contactar</button>
+                        </div>
+                        <div class="element-item departamento">
+                            <img class="img-fluid" src="Propiedades/Rinconada Valle Dorado/Principal.JPG" alt="Foto Departamento Rinconada Valle Dorado">
+                            <h4>Departamento Rinconada Valle Dorado</h4>
+                            <p>Fraccionamiento el dorado, 54020 Tlalnepantla de Baz, Méx., México</p>
+                            <p>Desde $2,800,000</p>
+                            <p>Departamentos en Rinconada de valle Dorado, de 106 a 108 m2, entrega inmediata, listos para habitar, cuentan con todos los servicios, 3 recámaras, sala, comedor, cocina equipada, 2 baños completos, área de lavado, elevador y roof garden</p>
+                            <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Rinconada Valle Dorado">Contactar</button>
+                        </div>
+                        <div class="element-item casa">
+                            <img class="img-fluid" src="Propiedades/Vivace Casa/principal.png" alt="Foto Casa Vivace">
+                            <h4>Casa Vivace</h4>
+                            <p>Calle Jacarandas 6, Jardines de Atizapán, Ciudad López Materos, Edo. Mex.</p>
+                            <p>Desde $5,250,000</p>
+                            <p>Casa de 190 m2, 3 recámaras, 3 1/2 Baños, sala, comedor, vestidor, terraza, patio de servicio, jardín, áreas verdes y área de lavado.</p>
+                            <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa Vivace">Contactar</button>
+                        </div>
+                        <div class="element-item departamento">
+                            <img class="img-fluid" src="Propiedades/Vivace Depto/principal.JPG" alt="Foto Departamento Vivace">
+                            <h4>Departamento Vivace</h4>
+                            <p>Calle Jacarandas 6, Jardines de Atizapán, Ciudad López Materos, Edo. Mex.</p>
+                            <p>Desde $3,231,000</p>
+                            <p>Departamento de 116 m2, 2 o 3 recámaras, 2 baños, sala, comedor, terraza y patio de servicio, 2 lugares de estacionamiento y excelentes acabados.</p>
+                            <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Vivace">Contactar</button>
+                        </div>
                     </div> <!-- end of grid -->
                     <!-- end of filter -->
                     
