--- a/propiedades.html
+++ b/propiedades.html
@@ -215,7 +215,7 @@
                     <div class="grid">
                         <div class="element-item casa">
                             <!-- <a href="articulo.html"> -->
-                                <img class="img-fluid" src="Propiedades/Casa remodelada Satelite Naucalpan (Acuario)/principal.jpeg" alt="Foto Casa remodelada en Satélite Naucalpan">
+                                <img class="img-fluid" src="Propiedades/Casa remodelada Satelite Naucalpan (Acuario)/card-img.jpg" alt="Foto Casa remodelada en Satélite Naucalpan">
                                 <h4>Casa remodelada en Satélite Naucalpan</h4>
                                 <p>Cerrada de Acuario 25 Jardines de Satélite, Naucalpan.</p>
                                 <p>$8,500,000</p>
@@ -224,7 +224,7 @@
                             <!-- </a> -->
                         </div>
                         <div class="element-item departamento">
-                            <img class="img-fluid" src="Propiedades/Departamento remodelado Calacoaya (Ale)/principal.jpeg" alt="Foto Departamento remodelado en Calacoaya">
+                            <img class="img-fluid" src="Propiedades/Departamento remodelado Calacoaya (Ale)/card-img.jpg" alt="Foto Departamento remodelado en Calacoaya">
                             <h4>Departamento remodelado en Calacoaya</h4>
                             <p>Av. Camino Real de Calacoaya #69 "A" Colonia Calacoaya Departamento J-301, Atizapán de Zaragoza.</p>
                             <p>$3,900,000</p>
@@ -232,7 +232,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento remodelado en Calacoaya">Contactar</button>
                         </div>
                         <div class="element-item departamento">
-                            <img class="img-fluid" src="Propiedades/Departamento Mixcoac/principal.jpg" alt="Foto Excelente Departamento en venta, en Insurgentes Mixcoac">
+                            <img class="img-fluid" src="Propiedades/Departamento Mixcoac/card-img.jpg" alt="Foto Excelente Departamento en venta, en Insurgentes Mixcoac">
                             <h4>Excelente Departamento en venta, en Insurgentes Mixcoac</h4>
                             <p>Campana 20, Insurgentes Mixcoac, Benito Juárez, 03920 Ciudad de México, CDMX</p>
                             <p>$4,980,000</p>
@@ -240,7 +240,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Excelente Departamento en venta, en Insurgentes Mixcoac">Contactar</button>
                         </div>
                         <div class="element-item departamento">
-                            <img class="img-fluid" src="Propiedades/Departamento Palmerales Atizapán/principal.jpeg" alt="Fotos Departamento en Palmerales Atizapán">
+                            <img class="img-fluid" src="Propiedades/Departamento Palmerales Atizapán/card-img.jpg" alt="Fotos Departamento en Palmerales Atizapán">
                             <h4>Departamento en Palmerales Atizapán</h4>
                             <p>Jardines de Atizapán, Emiliano Zapata 37</p>
                             <p>$1,900,000</p>
@@ -248,7 +248,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento en Palmerales Atizapán">Contactar</button>
                         </div>
                         <div class="element-item casa">
-                            <img class="img-fluid" src="Propiedades/Casa en Neza/principal.JPG" alt="Casa en Neza">
+                            <img class="img-fluid" src="Propiedades/Casa en Neza/card-img.jpg" alt="Casa en Neza">
                             <h4>Casa en Neza</h4>
                             <p>Calle capuchinas #78 col metropolitana 1ra secc Cd. Nezahualcoyotl, Edo. De México</p>
                             <p>$3,200,000</p>
@@ -256,7 +256,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa en Neza">Contactar</button>
                         </div>
                         <div class="element-item casa">
-                            <img class="img-fluid" src="Propiedades/Casa Las Alamedas/principal.jpg" alt="Foto Tortolas # 44 Fraccionamiento Las Alamedas, Atizapán de Zaragoza">
+                            <img class="img-fluid" src="Propiedades/Casa Las Alamedas/card-img.jpg" alt="Foto Tortolas # 44 Fraccionamiento Las Alamedas, Atizapán de Zaragoza">
                             <h4>Casa en Las Alamedas</h4>
                             <p>Tortolas # 44 Fraccionamiento Las Alamedas, Atizapán de Zaragoza</p>
                             <p>$6,200,000</p>
@@ -264,7 +264,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa en Las Alamedas">Contactar</button>
                         </div>
                         <div class="element-item casa">
-                            <img class="img-fluid" src="Propiedades/Casa en Valle Dorado/principal.jpeg" alt="Fotos Casa en Valle Dorado">
+                            <img class="img-fluid" src="Propiedades/Casa en Valle Dorado/card-img.jpg" alt="Fotos Casa en Valle Dorado">
                             <h4>Casa en Valle Dorado</h4>
                             <p>Boulevard Tulpan #23, Fracc. Valle Dorado, Tlalnepantla de Baz.</p>
                             <p>$4,300,000</p>
@@ -272,7 +272,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa en Valle Dorado">Contactar</button>
                         </div>
                         <div class="element-item casa">
-                            <img class="img-fluid" src="Propiedades/Casa en Valle Escondido/principal.jpg" alt="Foto Casa en Valle Escondido">
+                            <img class="img-fluid" src="Propiedades/Casa en Valle Escondido/card-img.jpg" alt="Foto Casa en Valle Escondido">
                             <h4>Casa en Valle Escondido</h4>
                             <p>Cto. Valle Hermoso 65 Loma de Vallescondido Atizapán</p>
                             <p>$10,990,000.00</p>
@@ -280,7 +280,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa en Valle Escondido">Contactar</button>
                         </div>
                         <div class="element-item departamento">
-                            <img class="img-fluid" src="Propiedades/Santa Fé (Departamento)/principal.jpeg" alt="Foto Departamento Santa Fe">
+                            <img class="img-fluid" src="Propiedades/Santa Fé (Departamento)/card-img.jpg" alt="Foto Departamento Santa Fe">
                             <h4>Departamento Santa Fe</h4>
                             <p>Colonia Cedros a 10 min de Santa Fe</p>
                             <p>$6,500,000</p>
@@ -288,7 +288,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Santa Fe">Contactar</button>
                         </div>
                         <div class="element-item departamento">
-                            <img class="img-fluid" src="Propiedades/Berriozabal/principal.JPG" alt="Foto Departamento Beriozábal">
+                            <img class="img-fluid" src="Propiedades/Berriozabal/card-img.jpg" alt="Foto Departamento Beriozábal">
                             <h4>Departamento Beriozábal</h4>
                             <p>Cerrada de Berriozabal No. 11, Colonia Tlalnepantla Centro, Tlalnepantla de Baz, Edo. Méx, C.P. 54000</p>
                             <p>$3,224,000.00 </p>
@@ -296,7 +296,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Beriozábal">Contactar</button>
                         </div>
                         <div class="element-item terreno">
-                            <img class="img-fluid" src="Propiedades/Hacienda L C/principal.JPG" alt="Foto Terreno Hacienda La Concepción">
+                            <img class="img-fluid" src="Propiedades/Hacienda L C/card-img.jpg" alt="Foto Terreno Hacienda La Concepción">
                             <h4>Terreno Hacienda La Concepción</h4>
                             <p>Carretera Tepotzotlán a Arcos del Sitio Km. 12.5 Hacienda la Concepción, C.P. 54657</p>
                             <p>Desde $900,000</p>
@@ -304,7 +304,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Terreno Hacienda La Concepción">Contactar</button>
                         </div>
                         <div class="element-item departamento">
-                            <img class="img-fluid" src="Propiedades/iKANI/principal.jpg" alt="Foto Departamento Ikani">
+                            <img class="img-fluid" src="Propiedades/iKANI/card-img.jpg" alt="Foto Departamento Ikani">
                             <h4>Departamento Ikani</h4>
                             <p>Lago Patzcuaro 636 Cumbres del Lago 76230 Juriquilla, Qro. México</p>
                             <p>Desde $4,000,000</p>
@@ -312,7 +312,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Ikani">Contactar</button>
                         </div>
                         <div class="element-item terreno">
-                            <img class="img-fluid" src="Propiedades/Nus Kah/principal.jpeg" alt="Foto terrenos Nus Kah">
+                            <img class="img-fluid" src="Propiedades/Nus Kah/card-img.jpg" alt="Foto terrenos Nus Kah">
                             <h4>Terrenos Nus kah</h4>
                             <p>Progreso, 97323 Nus Káh, Yuc.</p>
                             <p>$704,000.00</p>
@@ -320,7 +320,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Terrenos Nus Kah">Contactar</button>
                         </div>
                         <div class="element-item departamento">
-                            <img class="img-fluid" src="Propiedades/Rinconada Valle Dorado/Principal.JPG" alt="Foto Departamento Rinconada Valle Dorado">
+                            <img class="img-fluid" src="Propiedades/Rinconada Valle Dorado/card-img.jpg" alt="Foto Departamento Rinconada Valle Dorado">
                             <h4>Departamento Rinconada Valle Dorado</h4>
                             <p>Fraccionamiento el dorado, 54020 Tlalnepantla de Baz, Méx., México</p>
                             <p>Desde $2,800,000</p>
@@ -328,7 +328,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Departamento Rinconada Valle Dorado">Contactar</button>
                         </div>
                         <div class="element-item casa">
-                            <img class="img-fluid" src="Propiedades/Vivace Casa/principal.png" alt="Foto Casa Vivace">
+                            <img class="img-fluid" src="Propiedades/Vivace Casa/card-img.jpg" alt="Foto Casa Vivace">
                             <h4>Casa Vivace</h4>
                             <p>Calle Jacarandas 6, Jardines de Atizapán, Ciudad López Materos, Edo. Mex.</p>
                             <p>Desde $5,250,000</p>
@@ -336,7 +336,7 @@
                             <button class="btn-solid-reg propiedadBtn" data-propiedad="Casa Vivace">Contactar</button>
                         </div>
                         <div class="element-item departamento">
-                            <img class="img-fluid" src="Propiedades/Vivace Depto/principal.JPG" alt="Foto Departamento Vivace">
+                            <img class="img-fluid" src="Propiedades/Vivace Depto/card-img.jpg" alt="Foto Departamento Vivace">
                             <h4>Departamento Vivace</h4>
                             <p>Calle Jacarandas 6, Jardines de Atizapán, Ciudad López Materos, Edo. Mex.</p>
                             <p>Desde $3,231,000</p>
